# agento

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  pyrightconfig.json  secrets.env  secrets.env.example
.claude/agents/: feature-dev.md  implement-plan.md  sub-agent-code-review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
artifacts/code-understanding/: diff-analysis.json  index.html
docker/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
docker/cron/: Dockerfile  README.md  entrypoint.sh  logrotate-agent.conf  run.sh
docker/sandbox/: entrypoint.sh
docker/toolbox/: Dockerfile
docs/: README.md  getting-started.md
docs/architecture/: README.md  containers.md  cron-env-contract.md  data-flow.html  events.md  file-manager.md  publisher-consumer.md  routing.md  workspace.md  zero-trust.md
docs/cli/: README.md  admin.md  config.md  dev.md  doctor.md  init.md  install.md  job-pause-resume.md  modules.md  onboarding.md  run.md  skills.md  tokens.md  toolbox.md  tools.md  upgrade.md  workspace-build.md
docs/config/: README.md  core-config-data.md  encryption.md  env-vars.md  identity.md
docs/deployment/: docker-compose-override.md
docs/migrations/: v0.7.0-identity-in-db.md
docs/modules/: README.md  bitbucket.md  config-json.md  creating-a-module.md  module-json.md  outlook.md
docs/plans/: job_verify_event.md  mcp-toolset.md
docs/tools/: README.md  adding-a-tool.md  built-in-adapters.md  creating-an-adapter.md
scripts/: install.sh
tests/: TEST_PLAN.md  conftest.py
tests/e2e/: test_agento_run_real_cli.py  test_codex_real_cli.py
tests/fixtures/: claude_output_success.json  jira_search_cykliczne.json  jira_search_todo.json
tests/integration/: conftest.py  test_app_monitor_e2e.py  test_app_monitor_wiring.py  test_bitbucket_publish_pipeline.py  test_codex_real_cli.py  test_composable_skills.py  test_composable_tools.py  test_composable_workspace.py  test_concurrent_materialization.py  test_consumer_lifecycle.py  test_consumer_token_pool.py  test_cron_flow.py  test_instruction_files.py  test_job_execution.py  (+8 more)
workspace/: .cursorignore  .cursorrules  .gitignore  .mcp.json  SOUL.md
(+544 files in other folders)
